--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,35 @@
 services:
   backend:
     build: ./backend
+    volumes:
+      - ./backend:/app
     ports:
       - "8080:8080"
-#     environment:
-#       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mydb
-#       SPRING_DATASOURCE_USERNAME: user
-#       SPRING_DATASOURCE_PASSWORD: password
-#     depends_on:
-#       - db
-#   frontend:
-#     build: ./frontend
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - backend
-#   db:
-#     image: mysql:8.0
-#     environment:
-#       MYSQL_ROOT_PASSWORD: root_password
-#       MYSQL_DATABASE: mydb
-#       MYSQL_USER: user
-#       MYSQL_PASSWORD: password
-#     ports:
-#       - "3306:3306"
-#     volumes:
-#       - db_data:/var/lib/mysql
+    command: ./mvnw spring-boot:run
+  #     environment:
+  #       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mydb
+  #       SPRING_DATASOURCE_USERNAME: user
+  #       SPRING_DATASOURCE_PASSWORD: password
+  #     depends_on:
+  #       - db
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - backend
 
-# volumes:
-#   db_data:
+  #   db:
+  #     image: mysql:8.0
+  #     environment:
+  #       MYSQL_ROOT_PASSWORD: root_password
+  #       MYSQL_DATABASE: mydb
+  #       MYSQL_USER: user
+  #       MYSQL_PASSWORD: password
+  #     ports:
+  #       - "3306:3306"
+  #     volumes:
+  #       - db_data:/var/lib/mysql
+
+  # volumes:
+  #   db_data:
