--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "8080:8080"
     command: ./mvnw spring-boot:run
-  #     environment:
-  #       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mydb
-  #       SPRING_DATASOURCE_USERNAME: user
-  #       SPRING_DATASOURCE_PASSWORD: password
-  #     depends_on:
-  #       - db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/todo
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: password
+    depends_on:
+      - db
   # frontend:
   #   build: ./frontend
   #   ports:
@@ -19,17 +19,17 @@ services:
   #   depends_on:
   #     - backend
 
-  #   db:
-  #     image: mysql:8.0
-  #     environment:
-  #       MYSQL_ROOT_PASSWORD: root_password
-  #       MYSQL_DATABASE: mydb
-  #       MYSQL_USER: user
-  #       MYSQL_PASSWORD: password
-  #     ports:
-  #       - "3306:3306"
-  #     volumes:
-  #       - db_data:/var/lib/mysql
+  db:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: todo
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
 
-  # volumes:
-  #   db_data:
+volumes:
+  db_data:
