--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,11 @@ WORKDIR /app
 # Mavenをインストールするための依存関係を追加
 COPY .mvn .mvn
 COPY mvnw pom.xml ./
+
+# Converting the mvnw line endings during build
+RUN apk update && apk add dos2unix
+RUN dos2unix ./mvnw
+
 RUN ./mvnw dependency:resolve
 
 # プロジェクトのソースコードをコピー
