--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:mysql://mysql:3306/todo
-spring.datasource.username=root
-spring.datasource.password=rootpassword
+spring.datasource.url=jdbc:postgresql://db:5432/todo
+spring.datasource.username=user
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
